--- a/package.json
+++ b/package.json
@@ -10,6 +10,25 @@
     "type": "git",
     "url": "git+https://github.com/BornaMehr/barteh-aspnet-make.git"
   },
+
+  "dependencies": {
+    
+      "MD5": "^1.3.0",
+      "clean-css": "^3.4.21",
+      "fs": "0.0.1-security",
+      "fs-extra": "^1.0.0",
+      "glob": "^7.1.1",
+      "html-minifier": "^3.1.0",
+      "jquery": "^3.1.1",
+      "jsdom": "^9.8.3",
+      "jshint": "^2.9.4",
+      "node-uuid": "^1.4.7",
+      "sync-exec": "^0.6.2",
+      "tar-pack": "^3.3.0",
+      "uglify-js": "^2.7.4"
+    
+    
+  },
   "keywords": [
     "make",
     "barteh",
